# aletheia

./: .gitignore  Cargo.toml  README.md
USER_SUPPLIED_ROMS/: .gitignore
crates/aletheia-core/: Cargo.toml
crates/aletheia-core/src/: determinism.rs  lib.rs  replay.rs  rom.rs  system.rs
crates/aletheia-gb/: Cargo.toml
crates/aletheia-gb/src/: bus.rs  cartridge.rs  cpu.rs  lib.rs  timer.rs
crates/aletheia-gba/: Cargo.toml
crates/aletheia-gba/src/: lib.rs
crates/aletheia-lab-cli/: Cargo.toml
crates/aletheia-lab-cli/src/: main.rs
crates/aletheia-nes/: Cargo.toml
crates/aletheia-nes/src/: bus.rs  cartridge.rs  cpu.rs  lib.rs
docs/: architecture.md  issues.md  roadmap.md
docs/design/: 0001-deterministic-smoke-contract.md  0002-minimal-cpu-vertical.md  0003-rom-loading-and-multi-system-runner.md  0004-cpu-expansion-and-strict-faults.md  0005-compat-and-diff-harness.md
