[workspace]
members = [
  "crates/aletheia-core",
  "crates/aletheia-gb",
  "crates/aletheia-nes",
  "crates/aletheia-lab-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
blake3 = "1.8"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
